--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "devDependencies": {
     "@babel/cli": "^7.26.4",
     "@babel/core": "^7.26.7",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-transform-arrow-functions": "^7.25.9",
-    "@babel/preset-env": "^7.26.7"
+    "@babel/preset-env": "^7.26.7",
+    "@babel/preset-react": "^7.26.3"
   }
 }
